# cfhtProc2caom2

./: Dockerfile  README.md  setup.cfg
blank2caom2/: composable.py  main_app.py
cfhtProc2caom2/: composable.py  fits2caom2_augmentation.py  main_app.py  storage_names.py
cfhtProc2caom2/tests/: test_main_app.py  test_storage_name.py
cfhtProc2caom2/tests/data/: MegaPrime.gri.xml  test_netrc
cfhtProc2caom2/tests/data/megaprime/: 973887.xml  973888.xml  973889.xml  973890.xml  973891.xml  MegaPipe.209.126.R.MP9602.fits.header  MegaPipe.209.126.expected.xml  MegaPipe.209.126.in.xml  MegaPipe.358.122.G.MP9401.fits.header  MegaPipe.358.122.G.MP9401.weight.fits.header  MegaPipe.358.122.GRI.MP9605.fits.header  MegaPipe.358.122.GRI.MP9605.weight.fits.header  MegaPipe.358.122.I.MP9702.fits.header  MegaPipe.358.122.I.MP9702.weight.fits.header  MegaPipe.358.122.R.MP9601.fits.header  MegaPipe.358.122.R.MP9601.weight.fits.header  (+8 more)
ngvs2caom2/: __init__.py  builder.py  composable.py  main_app.py  storage_names.py
ngvs2caom2/tests/: config.yml  test_main_app.py  test_storage_name.py
ngvs2caom2/tests/data/: MegaPrime.i_sdss.xml  NGVS+0+0.expected.xml  NGVS+0+0.l.i.Mg002.expected.xml  NGVS+0+0.l.i.Mg002.fits.header  NGVS+0+0.l.i.Mg002.sig.fits.header  NGVS+0+0.l.i.Mg002.weight.fits.fz.header  W3+2-3.G.weight.fits.header  W3+2-3.I2.weight.fits.header  W3+2-3.R.fits.header  W3+2-3.R.weight.fits.header  W3+2-3.U.fits.header  W3+2-3.U.weight.fits.header  W3+2-3.Z.fits.header  W3+2-3.expected.xml
scripts/: cfht_proc_run.sh  config.yml  docker-entrypoint.sh  ngvs_run.sh
(+2 files in other folders)
